[tool.poetry]
name = "supervised_RNS_dMRI"
version = "0.1.0"
description = "Toolbox for supervised ML fitting of varying dMRI models"
authors = ["Bradley-Karat <Bradley.Karat@nyulangone.org>"]
license = "BSD-2-Clause"
readme = "README.md"
packages = [{include = "Supervised_RNS_dMRI"}]

[tool.poetry.scripts]
Supervised_RNS_dMRI = "Supervised_RNS_dMRI.run:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
snakebids = "0.14.0"
snakemake = "7.25.0"
numpy = ">=1.13"
nibabel = ">=3.2.1"
scipy = ">=1.8.0"
matplotlib = "<=3.9.2"
scikit-image = ">=0.19.0"
scikit-learn = ">=1.4.0"
docutils = "<=0.21.2"
PuLP = "<=2.7.0"
DiffSimGen = { git = "https://github.com/Bradley-Karat/DiffSimGen.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
